# gauloi-cli-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
src/: address.rs  bitcoin_api.rs  create.rs  eth_api.rs  execute.rs  handler.rs  import.rs  list.rs  main.rs  offer.rs  parse.rs  state.rs  swaps.rs
src/abi/: GauloiFactory.json
